# figif

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
crates/figif/: Cargo.toml
crates/figif-cli/: Cargo.toml
crates/figif-cli/src/: config.rs  main.rs  output.rs  progress.rs
crates/figif-cli/src/commands/: analyze.rs  completions.rs  info.rs  mod.rs  optimize.rs
crates/figif-core/: Cargo.toml
crates/figif-core/benches/: analysis.rs
crates/figif-core/examples/: analyze_gif.rs  optimize_gif.rs
crates/figif-core/src/: analysis.rs  error.rs  lib.rs  pipeline.rs  segment.rs  selector.rs  types.rs
crates/figif-core/src/decoders/: buffered.rs  mod.rs  streaming.rs
crates/figif-core/src/encoders/: gifski.rs  mod.rs  standard.rs
crates/figif-core/src/hashers/: blockhash.rs  dhash.rs  mod.rs  phash.rs
crates/figif-core/src/traits/: decoder.rs  encoder.rs  hasher.rs  mod.rs  similarity.rs
crates/figif-core/tests/: integration.rs
crates/figif-tui/: Cargo.toml
crates/figif-tui/src/: actions.rs  app.rs  main.rs  theme.rs
crates/figif-tui/src/ui/: mod.rs  operations_menu.rs  preview.rs
crates/figif/examples/: test_image.rs
crates/figif/src/: actions.rs  app.rs  main.rs
crates/figif/src/ui/: export.rs  help.rs  mod.rs  preview.rs  timeline.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decoder.rs
