[workspace]
resolver = "3"
members = ["crates/*", "fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickpaterno/figif"

[workspace.dependencies]
# Core
thiserror = "2.0.18"
image = { version = "0.25.10", default-features = false, features = ["gif", "png"] }
gif = "0.14.1"

# Hashing
img_hash = "3.2"

# Lossy encoding (optional)
gifski = "1.34"

# Parallel processing
rayon = "1.11"

# CLI
clap = { version = "4.6", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.6"
color-eyre = "0.6.5"
indicatif = "0.18.4"
console = "0.16.3"
dialoguer = "0.12"
tabled = "0.20"
confy = "2.0"
directories = "6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# TUI
ratatui = "0.30"
ratatui-image = { version = "10.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.50", features = ["full"] }
tokio-util = "0.7.18"
futures = "0.3.32"
tui-logger = "0.18.1"

# Dev dependencies
tempfile = "3.27"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
